--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@fullcalendar/core": "^6.1.9",
         "@fullcalendar/list": "^6.1.9",
-        "@fullcalendar/timegrid": "^6.1.9"
+        "@fullcalendar/timegrid": "^6.1.9",
+        "flatpickr": "^4.6.13"
     }
 }
