--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
         "axios": "^1.1.2",
+        "jquery": "^3.7.1",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.6",
         "tailwindcss": "^3.1.0",
@@ -19,7 +20,7 @@
         "@fullcalendar/core": "^6.1.9",
         "@fullcalendar/list": "^6.1.9",
         "@fullcalendar/timegrid": "^6.1.9",
-        "flatpickr": "^4.6.13"
+        "flatpickr": "^4.6.13",
+        "tippy.js": "^6.3.7"
     }
 }
-
